--- a/PreSchool/Adewale-Kikiola-Result.html
+++ b/PreSchool/Adewale-Kikiola-Result.html
@@ -246,9 +246,9 @@
                            <td>Good</td>
                            <td>Very good</td>
                            <td>Very good</td>
-                           <td>Excellent</td>
+                           <td></td>
+                           <td>Average</td>
                            <td>Good</td>
-                           <td>Very good</td>
                            <td>Very good</td>
                            <td></td>
                         
@@ -291,7 +291,7 @@
                         <tr>
                            <td>Reading</td>
                            <td></td>
-                           <td>*</td>
+                           <td></td>
                            <td></td>
                            <td></td>
                            <td></td>
