--- a/PreSchool/Akintade-Daniel-Result.html
+++ b/PreSchool/Akintade-Daniel-Result.html
@@ -285,8 +285,8 @@
                         <tr>
                            <td>Reading</td>
                            <td></td>
-                           <td>*</td>
                            <td></td>
+                           <td>*</td>
                            <td></td>
                            <td></td>
                            
@@ -477,10 +477,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: Well done on your performaNce, Daniel.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                        <p>Head Teachers Comment: We are happy to have you as part of the school community.<hr></p>
 
                         &nbsp;
                         &nbsp;                
