--- a/PreSchool/Akintade-Daniel-Result.html
+++ b/PreSchool/Akintade-Daniel-Result.html
@@ -480,7 +480,7 @@
                       <p>Class Teachers Comment: Well done on your performaNce, Daniel.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: We are happy to have you as part of the school community.<hr></p>
+                        <p>Head Teachers Comment: We are happy to have you as part of our school community.<hr></p>
 
                         &nbsp;
                         &nbsp;                
