--- a/PreSchool/Elue-Andrey-Result.html
+++ b/PreSchool/Elue-Andrey-Result.html
@@ -480,7 +480,7 @@
                       <p>Class Teachers Comment:This is an impressive result. Keep it up.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:You are welcome to preschool.</p> 
+                        <p>Head Teachers Comment:You are welcome to Preschool.</p> 
                         
 
                         &nbsp;
