--- a/PreSchool/Ismail-Fahhama-Result.html
+++ b/PreSchool/Ismail-Fahhama-Result.html
@@ -241,7 +241,7 @@
                            <td>Very good</td>
                            <td>Good</td>
                            <td></td>
-                           <td>excellent</td>
+                           <td>Excellent</td>
                            <td>Good</td>
                            <td>Very good</td>
                            <td></td>
