--- a/PreSchool/Motoro-Jesse-Result.html
+++ b/PreSchool/Motoro-Jesse-Result.html
@@ -480,7 +480,7 @@
                       <p>Class Teachers Comment: Jesse is always eager to learn.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: You are welcome to Preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
