--- a/PreSchool/Olaku-Obasola-Result.html
+++ b/PreSchool/Olaku-Obasola-Result.html
@@ -480,7 +480,7 @@
                       <p>Class Teachers Comment: Put in more effort,Obasola. You can do better.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: You are welcome to Preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
