--- a/PreSchool/Afosi-Omojadesola-Donald-Result.html
+++ b/PreSchool/Afosi-Omojadesola-Donald-Result.html
@@ -263,7 +263,7 @@
                        
                         <tr>
                           <td>Good</td>
-                          <td>Average<x/td>
+                          <td>Average</td>
                           <td>Good</td>
                           <td>Average</td>
                           <td>Very Good</td>
