--- a/PreSchool/Olatemiju-Akorede-Result.html
+++ b/PreSchool/Olatemiju-Akorede-Result.html
@@ -480,7 +480,7 @@
                       <p>Class Teachers Comment: Akorede is a pleasant boy.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: You are welcome to Preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
