--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -542,10 +542,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:She needs to pay more attaention to her academics______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:  She needs to pay more attaention to her academics<br> </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:Satisfactory______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Satisfactory<br> </p>
 
                      &nbsp;
                      &nbsp;
