--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Bravo!.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Bravo!Morayo is improving in her studies..<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: A good result!<br>_____________________________________________________</p>
