--- a/Onaja-Empress-Result.html
+++ b/Onaja-Empress-Result.html
@@ -541,10 +541,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Empress should learn to stay focused and avoid distraction in class _____________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:Empress should learn to stay focused and avoid distraction in class<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:__A very good result____________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A very good result<br></p>
 
                      &nbsp;
                      &nbsp;
