--- a/GradeTwo/Bello-Oluwalonimi-Result.html
+++ b/GradeTwo/Bello-Oluwalonimi-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Great performance!<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Great performance!Oluwalonimi is enthusiastic to learn new things.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Keep it up!<br>_____________________________________________________</p>
