--- a/Onoja-Emilia-Result.html
+++ b/Onoja-Emilia-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Onaja Emilia</h2><br>
                      <h2> Grade Eight </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1st Term  .2024/2025.................... </p>
+                        <p>Continuous Assessment Scores for 1st Term 2024/2025.................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -542,10 +542,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Emilia has a positive attitude towards her academics.______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Emilia has a positive attitude towards her academics.<br></p>
+   
                      &nbsp;
-                     &nbsp;
-                     <p>Head Teachers Comment:____A Very good result__________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:  A Very good result<br></p>
 
                      &nbsp;
                      &nbsp;
