--- a/GradeTwo/Odebunmi-Temisire-Result.html
+++ b/GradeTwo/Odebunmi-Temisire-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Fantastic result!<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Temisire is hardworking and brilliant.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Good job!<br>_____________________________________________________</p>
