--- a/GradeTwo/Olatunji-Peace-Result.html
+++ b/GradeTwo/Olatunji-Peace-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: You can do better next term.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Peace needs to improve speedily in her studies.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: There is room for improvement.<br>_____________________________________________________</p>
