--- a/Ogundeji-Tileolanimi-Result.html
+++ b/Ogundeji-Tileolanimi-Result.html
@@ -543,10 +543,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:_Tileolnimi is making excellent progress in her academics._____________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:_Tileolnimi is making excellent progress in her academics.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: An excellent result______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: An excellent result<br></p>
 
                      &nbsp;
                      &nbsp;
