--- a/GradeTwo/Yinka-Sobo-Tumilara-Result.html
+++ b/GradeTwo/Yinka-Sobo-Tumilara-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Good job!<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Good job!Tumilara is brilliant and hardworking.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Keep it up!<br>_____________________________________________________</p>
