--- a/GradeTwo/Popoola-Oreoluwa-Result.html
+++ b/GradeTwo/Popoola-Oreoluwa-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Good result!<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Good result!Oreoluwa is brilliant and diligent.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Don't relent!<br>_____________________________________________________</p>
