--- a/GradeTwo/Adeniba-Temiloluwa-Result.html
+++ b/GradeTwo/Adeniba-Temiloluwa-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Temiloluwa always listen to correction.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Temiloluwa is improving in his studies.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Temiloluwa can do better.<br>_____________________________________________________</p>
