--- a/GradeTwo/Akande-Wisdom-Result.html
+++ b/GradeTwo/Akande-Wisdom-Result.html
@@ -502,10 +502,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: This is a good performance.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:Wisdom is intelligent and cooperates with others in the classroom.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Good job!<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: This is a very good result<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
