--- a/Akinbogun-Christopher-Result.html
+++ b/Akinbogun-Christopher-Result.html
@@ -539,10 +539,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:_Christopher needs to play less and focus more on his academics _____________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Christopher needs to play less and focus more on his academics<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:____Excellent result.__________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Excellent result.<br></p>
 
                      &nbsp;
                      &nbsp;
