--- a/GradeThree/Adepoju-Jason-Joseph-Result.html
+++ b/GradeThree/Adepoju-Jason-Joseph-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Adepoju Jason Joseph</h2><br>
+                     <h2>Result for <br>Adepoju Jason Oluwatisetemi</h2><br>
                      <h2> Grade Four </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term: 1st Term 2024/2025 </p>
