--- a/GradeThree/Adepoju-Jason-Joseph.html
+++ b/GradeThree/Adepoju-Jason-Joseph.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Adepoju <br>Jason Joseph's<br> Portal
+                                             Adepoju <br>Jason Oluwatisetemi's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Adepoju Jason Joseph<span></span></a>
+                                             <a class="read_more" href=""> Adepoju Jason Oluwatisetemi <span></span></a>
                                           </div>
                                        </div>
                                     </div>
