--- a/GradeSix/Adebayo-Desire-Emmanuel-Result.html
+++ b/GradeSix/Adebayo-Desire-Emmanuel-Result.html
@@ -92,7 +92,7 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Adebayo Desire Emmanuel</h2><br>
-                     <h2> Grade Five </h2>
+                     <h2> Grade Six </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term  ..................... </p>
                          
