--- a/GradeSix/Adebayo-Desire-Emmanuel-Result.html
+++ b/GradeSix/Adebayo-Desire-Emmanuel-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Adebayo Desire Emmanuel</h2><br>
                      <h2> Grade Six </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
