--- a/GradeTwo/Adelakun-Ohunoluwa-Result.html
+++ b/GradeTwo/Adelakun-Ohunoluwa-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade Three </h2>
                      
                      <table>
-                        <p>Continuous Assessment Scores for Term: 1st Term 2024/2025 </p>
+                        <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
