--- a/PreSchool/Boyejo-Daniel-Result.html
+++ b/PreSchool/Boyejo-Daniel-Result.html
@@ -479,7 +479,7 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Daniel is always excited to learn.<br></p>
+                   <p>Class Teachers Comment: Keep making progress Daniel.<br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: This is a very good result. keep it up <br></p>
