--- a/PreSchool/Gentry-Anfelaoluwa-Result.html
+++ b/PreSchool/Gentry-Anfelaoluwa-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Anfelaoluwa has shown an impressive attitude towards learning this term.<br></p>
+                    <p>Class Teachers Comment: Good job Anfela.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is an excellent performance, Anfelaoluwa.<br></p>
+                     <p>Head Teachers Comment: A very good result.<br></p>
 
                      <h2>Result for <br>Gentry Anfelaoluwa</h2><br>
                      <h2> Pre School </h2>
