--- a/GradeTwo/Oni-Dunmininu-Result.html
+++ b/GradeTwo/Oni-Dunmininu-Result.html
@@ -96,7 +96,7 @@
 
                      <table>
                         <p> Click back on browser to go back to students profile </p> 
-                        <p>Continuous Assessment Scores for Term: 1st Term 2024/2025 </p>
+                        <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
