--- a/GradeOne/Adelakun-Ireoluwa-John-Result.html
+++ b/GradeOne/Adelakun-Ireoluwa-John-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Adelakun Ireoluwa John</h2><br>
                      <h2> Grade Two </h2>
 able>
-                        <p>Continuous Assessment Scores for Term: 1st Term 2024/2025 </p>
+                        <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
