--- a/GradeFour/Oluwaseun-Elizabeth-Result.html
+++ b/GradeFour/Oluwaseun-Elizabeth-Result.html
@@ -504,7 +504,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:!.<br> Elizabeth is making steady progress. s</p>
+                     <p>Class Teachers Comment:<br> Elizabeth is making steady progress.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:<br>A good performance</p>
