--- a/GradeOne/Olajide-Zahra-Result.html
+++ b/GradeOne/Olajide-Zahra-Result.html
@@ -92,7 +92,9 @@
 
                      
                      <h2>Result for <br>Olajide Zahra</h2><br>
-p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
+<h2> Grade Two </h2>
+                     <table>
+                     <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
