--- a/GradeOne/Shittu-Jomiloju-Result.html
+++ b/GradeOne/Shittu-Jomiloju-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Shittu Jomiloju</h2><br>
                       <h2> Grade Two </h2>
 <table>
-       >Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
+       <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
