--- a/GradeOne/Akintola-Phoebe-Result.html
+++ b/GradeOne/Akintola-Phoebe-Result.html
@@ -272,9 +272,9 @@
                                                   <td>Good</td>
                                                   <td>Good</td>
                                                   <td>Good</td>
-                                                  <td>Average</td>
                                                   <td>Good</td>
                                                   <td>Excellent</td>
+                                                  <td>Good</td>
                                                   <td></td>
                                                   <td>Teachers Remarks</td>                           
                                                 </tr>
