--- a/GradeOne/Atunwa-Amaris-Result.html
+++ b/GradeOne/Atunwa-Amaris-Result.html
@@ -508,7 +508,7 @@
                                              <p>Class Teachers Comment:<br>Amaris is really trying to get better academically, keep it up</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:<br>Amaris is making a steadyb progress.</p>
+                                             <p>Head Teachers Comment:<br>Amaris is making a steady progress.</p>
                         <p>Continuous Assessment Scores for Term:  1st term 2024/2025 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
