--- a/GradeOne/Ogunwomoju-King-Jason-Result.html
+++ b/GradeOne/Ogunwomoju-King-Jason-Result.html
@@ -504,10 +504,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teacher's Comment:A very good performance. Do not relent.</p>
+                                             <p>Class Teacher's Comment: A very good performance,do not relent.</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teacher's Comment:A very good performance.</p>
+                                             <p>Head Teacher's Comment: Good job Kingjason .</p>
 
 
                         <p>Continuous Assessment Scores for Term: 1st Term 2024/2025 </p>
