--- a/GradeOne/Olufidipe-Obaloluwa-Result.html
+++ b/GradeOne/Olufidipe-Obaloluwa-Result.html
@@ -503,10 +503,10 @@
                                                   
                                                 </tr>
                                              </table> 
-                                             <p>Class Teachers Comment: A very brilliant performance, keep it up<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment: A very brilliant performance, keep it up<br></p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:<br>A satifactory results, keep it up</p>
+                                             <p>Head Teachers Comment:<br> A satifactory results, keep it up</p>
 
 
                      <table><p>Continuous Assessment Scores for Term : 1st term 2024/2025. </p>
