--- a/GradeOne/Olayiwola-Dunmininu-Result.html
+++ b/GradeOne/Olayiwola-Dunmininu-Result.html
@@ -94,7 +94,9 @@
                      
                      <h2>Result for <br>Olayiwola Dunmininu</h2><br>
                     <h2> Grade Two </h2>
-  <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
+  <table>
+
+                     <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
