--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -227,7 +227,7 @@
                         </tr>
                         <tr>
                           <td>65</td>
-                          <td>68</td>
+                          <td>nil</td>
                           <td>90</td>
                           <td>72</td>
                           <td>78</td>
