--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -276,7 +276,7 @@
                         </tr>
                         <tr>
                           <td>65</td>
-                          <td>67</td>
+                          <td>nil</td>
                           <td>86</td>
                           <td>56</td>
                           <td>75</td>
