--- a/PreSchool/Afosi-Omojadesola-Donald-Result.html
+++ b/PreSchool/Afosi-Omojadesola-Donald-Result.html
@@ -91,7 +91,8 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                      h2>Result for <br>Afosi Omojadesola Donald</h2><br>
+                     
+                      <br>Afosi Omojadesola Donald</h2><br>
                      <h2> Grade one </h2>
                                              <p>Continuous Assessment Scores for Term : 2nd Term 2024/2025. </p>
                          
