--- a/GradeOne/Oladipupo-Firewamiri-Result.html
+++ b/GradeOne/Oladipupo-Firewamiri-Result.html
@@ -96,7 +96,8 @@
 
                      
                      <h2> Grade Two </h2>
-
+</table>
+ 
         <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
