--- a/GradeOne/Oladipupo-Firewamiri-Result.html
+++ b/GradeOne/Oladipupo-Firewamiri-Result.html
@@ -93,7 +93,7 @@
                      
                      <h2>Result for <br>Oladipupo Firewamiri</h2><br>
                      <h2> Grade Two </h2>
-         </table>
+         <table>
         <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
