--- a/PreSchool/Adewunmi-Mosasinolaoluwa.html
+++ b/PreSchool/Adewunmi-Mosasinolaoluwa.html
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Adelakun Ideraoluwa<span></span></a>
+                                             <a class="read_more" href=""> Adewunmi Mosasinolaoluwa<span></span></a>
                                           </div>
                                        </div>
                                     </div>
