--- a/PreSchool/Adewunmi-Mosasinolaoluwa-Result.html
+++ b/PreSchool/Adewunmi-Mosasinolaoluwa-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                     <h2>Result for <br>Adewunmi Mosasinolaoluwa</h2><br>
+                     <h2>Result for <br>Adewunmi Mosasinuoluwa</h2><br>
                      <h2> Pre School </h2>
                      <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025</p>
                   <!-- Attendance Table-->
