--- a/PreSchool/Adewunmi-Mosasinolaoluwa.html
+++ b/PreSchool/Adewunmi-Mosasinolaoluwa.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Adewunmi <br>Mosasinolaoluwa's<br> Portal 
+                                             Adewunmi <br>Mosasinuoluwa's<br> Portal 
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Adewunmi Mosasinolaoluwa<span></span></a>
+                                             <a class="read_more" href=""> Adewunmi Mosasinuoluwa<span></span></a>
                                           </div>
                                        </div>
                                     </div>
