--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -301,7 +301,7 @@
                         
                         <tr>
                           <td>C</td>
-                          <td>C</td>
+                          <td>nil</td>
                           <td>A</td>
                           <td>D</td>
                           <td>B</td>
