--- a/GradeFive/Ariyo-Yanmife-Result.html
+++ b/GradeFive/Ariyo-Yanmife-Result.html
@@ -258,14 +258,14 @@
                         </tr>
                        
                         <tr>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td>V.good</td>
                           <td>Excellent</td>
+                          <td>Excellent</td>
                           <td>V.good</td>
-                          <td>Good</td>
-                          <td>Excellent</td>
-                          <td>Excellent</td>
-                          <td>Excellent</td>
-                          <td>Good</td>
+                          <td>V.good</td>
                           <td>Good</td>
                           <td>V.good</td>
                           <td>Excellent</td>
@@ -504,7 +504,7 @@
                      <p>Class Teachers Comment:Yanmife demonstrates a good understanding of math concepts.</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:<br>A very good performance</p>
+                     <p>Head Teachers Comment:<br>Promoted to grade 7</p>
                      <table>
                         <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025</p>
                          
