--- a/GradeFive/Ariyo-Yanmife-Result.html
+++ b/GradeFive/Ariyo-Yanmife-Result.html
@@ -501,7 +501,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Yanmife demonstrates a good understanding of math concepts.</p>
+                     <p>Class Teachers Comment:Best wishes for a bright future!</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:<br>Goodluck in your next endeavour</p>
