--- a/GradeFive/Yinka-Sobo-Daniel-Semilore-Result.html
+++ b/GradeFive/Yinka-Sobo-Daniel-Semilore-Result.html
@@ -504,7 +504,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:<br>An outstanding performance, keep it up.</p>
+                     <p>Class Teachers Comment:<br>Best wishes for a bright future.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:<br>Goodluck in your next endeavour</p>
