--- a/GradeFour/Adeniba-Tofunmi-Result.html
+++ b/GradeFour/Adeniba-Tofunmi-Result.html
@@ -114,12 +114,12 @@
                         </tr>
                         <tr>
                           <td>No. of times school opened</td>
-                          <td>120</td> 
+                          <td>122</td> 
                                          
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>120</td> 
+                          <td>122</td> 
                                          
                        </tr>
                       </table>
@@ -922,7 +922,7 @@
                      <p>Class Teachers Comment: This is a good result, Tofunmi is making a commendable progress academically.</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A good performance</p>
+                     <p>Head Teachers Comment:Goodluck in your next endeavour</p>
 
                      table>
                         <p>Continuous Assessment Scores for Term: 1st term 2024/2025 </p>
