--- a/PreSchool/Odusanya-Jemima-Result.html
+++ b/PreSchool/Odusanya-Jemima-Result.html
@@ -91,7 +91,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Odusanya Jemima</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term: 2nd Term 2024/2025  </p>
+                     <p>Continuous Assessment Scores for Term: 3rd Term 2024/2025  </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
