--- a/Fikayo-Fayomi-Result.html
+++ b/Fikayo-Fayomi-Result.html
@@ -552,10 +552,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:<br>Fikayomi's critical thinking skill has developed and she's eager to learn new concept </p>
+                     <p>Class Teachers Comment:<br>Fikayomi's critical thinking skill has developed and she's eager to learn new concept. </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:<br> Promoted to JSS2 </p>
+                     <p>Head Teachers Comment:<br> You are welcome to our school community. Promoted to JSS2 </p>
 
                      &nbsp;
                      &nbsp;
