--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -549,7 +549,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Jomiloju is committed to doing her best academically.<br> </p>
+                     <p>Class Teachers Comment:Jomiloju participates actively and she is committed to doing her best academically.<br> </p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to JSS 2<br> </p>
