--- a/Olowu-Racheal-Precious-Result.html
+++ b/Olowu-Racheal-Precious-Result.html
@@ -562,7 +562,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Precious is improving gradually <br></p>
+                     <p>Class Teachers Comment: Precious is improving gradually and cooperates with other peers in the class. <br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:<br> Promoted to JSS2 </p>
