--- a/Onaja-Empress-Result.html
+++ b/Onaja-Empress-Result.html
@@ -544,7 +544,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Empress enthusiasm to learning has helped her academic performance <br></p>
+                     <p>Class Teachers Comment: Empress's enthusiasm to learning has helped her academic performance. <br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to JSS2 <br></p>
