--- a/Onoja-Emilia-Result.html
+++ b/Onoja-Emilia-Result.html
@@ -547,7 +547,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Emilia is intelligent and cooperates withn teachers and peers.<br></p>
+                     <p>Class Teachers Comment: Emilia is intelligent and cooperates with teachers and peers.<br></p>
    
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to JSS3 .<br></p>
