--- a/PreSchool/Oluwaseun-David-Result.html
+++ b/PreSchool/Oluwaseun-David-Result.html
@@ -481,7 +481,7 @@
                       <p>Class Teachers Comment: David has a bright mind. <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: This is a very good result. Promoted to grade 1. <br></p>
+                        <p>Head Teachers Comment: This is a very good result. Promoted to Pre-school 3. <br></p>
                      
                   <!-- Attendance Table-->
                   &nbsp;
