--- a/PreSchool/Christian-Apooyin-Result.html
+++ b/PreSchool/Christian-Apooyin-Result.html
@@ -475,10 +475,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: Christian is alovely child <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                        <p>Head Teachers Comment: Welcome to Pre school<br></p>
 
                         &nbsp;
                         &nbsp;                
