--- a/PreSchool/Rahmat-Muibi-Result.html
+++ b/PreSchool/Rahmat-Muibi-Result.html
@@ -484,7 +484,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:<br> Put in more efffot Rahmat.</p>
+                      <p>Class Teachers Comment:<br>  This is a satisfactory report. However, put in more effort next term to get an excellent report.</p>
                         &nbsp;
                         &nbsp;
                         <p>Head Teachers Comment: <br> Good job Rahmat.</p>
