--- a/GradeThree/Atunwa-Ayanfe-Result.html
+++ b/GradeThree/Atunwa-Ayanfe-Result.html
@@ -214,7 +214,7 @@
                           <td>84</td>
                           <td>85</td>
                           <td>80</td>
-                          <td></td>
+                          <td>80</td>
                           <td>65</td>
                           <td>85</td>
                           <td>70</td>
@@ -250,7 +250,7 @@
                           <td>84</td>
                           <td>82</td>
                           <td>80</td>
-                          <td></td>
+                          <td>80</td>
                           <td>68</td>
                           <td>75</td>
                           <td>73</td>
@@ -269,7 +269,7 @@
                           <td>Very Good</td>
                           <td>Very Good</td>
                           <td>Very Good</td>
-                          <td></td>
+                          <td>Very Good</td>
                           <td>Average</td>
                           <td>Good</td>
                           <td>Good</td>
