--- a/PreSchool/Ayomide-Faisal-Adebayo-Result.html
+++ b/PreSchool/Ayomide-Faisal-Adebayo-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                     <h2>Result for <br>Ayomide Faisal Adebayo</h2><br>
+                     <h2>Result for <br>Ayomade Faisal Adebayo</h2><br>
                      <h2> Pre School </h2>
                      <p>Continuous Assessment Scores for 3rd Term 2024/2025 ................... </p>
                   <!-- Attendance Table-->
