--- a/Ogundeji-Tileolanimi-Result.html
+++ b/Ogundeji-Tileolanimi-Result.html
@@ -552,10 +552,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Tileolanimi is fascinating to teach and enthusiastic to learn <br></p>
+                     <p>Class Teachers Comment: Tileolanimi is fascinating to teach and enthusiastic to learn. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:Promoted to JSS2 <br></p>
+                     <p>Head Teachers Comment: Promoted to JSS 3. <br></p>
 
                         
                         <p>Continuous Assessment Scores for 2nd Term  2024/2025.................... </p>
