--- a/Adebayo-Demilade-Micheal-Result.html
+++ b/Adebayo-Demilade-Micheal-Result.html
@@ -147,7 +147,7 @@
                            <th>Literature in English  &nbsp;</th>
                            <th>BSTC &nbsp;</th>
                            <th>National Value &nbsp;</th>
-                           <th>CRS;</th>
+                           <th>CRS &nbsp;</th>
                            <th>CCA &nbsp;</th>
                            <th>Prevocational Studies &nbsp;</th>
                            <th>French &nbsp;</th>
