--- a/GradeFour/Itoto-Darasimi-Result.html
+++ b/GradeFour/Itoto-Darasimi-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Ogundeji-Itoto Oluwadarasimi Emmanuel</h2><br>
+                     <h2>Result for <br>Ogundeji-Itotoi Oluwadarasimi Emmanuel</h2><br>
                      <h2> Grade Five </h2>
                      table>
                         <p>Continuous Assessment Scores for Term: 3rd Term 2024/2025</p>
