--- a/GradeFour/Oyenusi-Inioluwa-Result.html
+++ b/GradeFour/Oyenusi-Inioluwa-Result.html
@@ -270,7 +270,7 @@
                           <td>Excellent</td>
                           <td>Average</td>
                           <td>Average</td>
-                          <td>Good/td>
+                          <td>Good</td>
                           <td>-</td>
                           <td></td>
                           
