--- a/PreSchool/Afosi-Omojadesola-Donald-Result.html
+++ b/PreSchool/Afosi-Omojadesola-Donald-Result.html
@@ -92,7 +92,8 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
                      
-                      <br>Afosi Omojadesola Donald</h2><br>
+                      <br>Afosi Omojadesola Donald
+                  </h2><br>
                      <h2> Grade one </h2>
                      p>Continuous Assessment Scores for Term : 3rd Term 2024/2025. </p>
                          
