--- a/GradeFour/Oyenusi-Inioluwa-Result.html
+++ b/GradeFour/Oyenusi-Inioluwa-Result.html
@@ -504,7 +504,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:!.<br>Wishing you continue success.</p>
+                     <p>Class Teachers Comment:!.<br>Wishing you continued success.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:<br>Goodluck in your next endeavour</p>
