--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -504,7 +504,7 @@
                      <p>Class Teachers Comment: Morayo need to put more effort and pay attention in class <br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very good result! <br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Promoted to grade four <br>_____________________________________________________</p>
 
                      <table>
                         <p> Click back on browser to go back to students profile </p> 
@@ -2677,3 +2677,4 @@
       </script>
    </body>
 </html>
+
