--- a/Onoja-Emilia-Result.html
+++ b/Onoja-Emilia-Result.html
@@ -547,7 +547,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Emilia is intelligent and cooperates with teachers and peers.<br></p>
+                     <p>Class Teachers Comment: Emilia needs to be more focused. There is room for improvement<br></p>
    
                      &nbsp;
                      <p>Head Teachers Comment: A Very good performance .<br></p>
@@ -2017,4 +2017,5 @@
       </script>
    </body>
 </html>
+
 
