--- a/Akinbogun-Christopher-Result.html
+++ b/Akinbogun-Christopher-Result.html
@@ -539,10 +539,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Christopher's thinking skill has developed rapidly and he always aspires for the best result.<br></p>
+                     <p>Class Teachers Comment: A Very good result.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Promoted to JSS3.<br></p>
+                     <p>Head Teachers Comment: A Very good performance.<br></p>
                         
                    <h2>Result for <br>Akinbogun Christopher</h2><br>
                      <h2> Grade Eight </h2>
@@ -1996,4 +1996,5 @@
       </script>
    </body>
 </html>
+
 
