--- a/Zara-Chizaramekpere-Result.html
+++ b/Zara-Chizaramekpere-Result.html
@@ -150,7 +150,7 @@
                            <th>CRS &nbsp;</th>
                            <th>CCA &nbsp;</th>
                            <th>PVS &nbsp;</th>
-                           <th>French &nbsp;</th>
+                           <th>Yoruba &nbsp;</th>
                            <th>Music &nbsp;</th>
                            <th>Phonics &nbsp;</th>
                            
@@ -1061,3 +1061,4 @@
    </body>
 
 </html>
+
