--- a/Agbabiaka-Elizabeth-Result.html
+++ b/Agbabiaka-Elizabeth-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Adebayo Desire</h2><br>
+                     <h2>Result for <br>Agbabiaka Elizabeth</h2><br>
                      <h2> JSS ONE </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term  ..................... </p>
