--- a/Adebayo-Desire-Result.html
+++ b/Adebayo-Desire-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Adebayo Desire</h2><br>
                      <h2> JSS ONE </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for  1st Term  2025/2026..................... </p>
                          
                        <!-- Attendance Table-->
                      &nbsp;
@@ -180,22 +180,22 @@
                            <td>1st Half</td>
                          </tr>
                          <tr>
-                           <td>93</td>
-                           <td>69</td>
-                           <td>90</td>
-                           <td>85</td>
-                           <td>90</td>
-                           <td>100</td>
-                           <td>95</td>
-                           <td>70</td>
-                           <td>-</td>
-                           <td>89</td>
-                           <td>70</td>
-                           <td>55</td>
+                           <td>40</td>
+                           <td>40</td>
+                           <td>57</td>
                            <td>60</td>
+                           <td>60</td>
+                           <td>50</td>
+                           <td>42</td>
+                           <td>44</td>
+                           <td>-</td>
+                           <td>44</td>
+                           <td>59</td>
+                           <td>-</td>
+                           <td>58</td>
                            <td>85</td>
-                           <td></td>
-                           <td>85</td>
+                           <td>41</td>
+                           <td>-</td>
                            <td>-</td>
                            <td>-</td>
                             <td>Marks Obtainable</td>
@@ -911,4 +911,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
