--- a/Agbabiaka-Elizabeth-Result.html
+++ b/Agbabiaka-Elizabeth-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Agbabiaka Elizabeth</h2><br>
                      <h2> JSS ONE </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for 1st Term 2025/2026 ..................... </p>
                          
                        <!-- Attendance Table-->
                      &nbsp;
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>112</td> 
+                          <td>122</td> 
                                          
                        </tr>
                       </table>
@@ -150,7 +150,7 @@
                            <th>CRS &nbsp;</th>
                            <th>CCA &nbsp;</th>
                            <th>PVS &nbsp;</th>
-                           <th>French &nbsp;</th>
+                           <th>Yoruba &nbsp;</th>
                            <th>Music &nbsp;</th>
                            <th>Phonics  &nbsp;</th>
                            <th>Yoruba  &nbsp;</th>
@@ -180,12 +180,12 @@
                            <td>1st Half</td>
                          </tr>
                          <tr>
-                           <td>93</td>
-                           <td>69</td>
-                           <td>90</td>
-                           <td>85</td>
-                           <td>90</td>
-                           <td>100</td>
+                           <td>80</td>
+                           <td>92</td>
+                           <td>87</td>
+                           <td>75</td>
+                           <td>67</td>
+                           <td></td>
                            <td>95</td>
                            <td>70</td>
                            <td>-</td>
@@ -911,4 +911,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
