--- a/Akinbogun-Christopher-Result.html
+++ b/Akinbogun-Christopher-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Akinbogun Christopher</h2><br>
                      <h2> Grade Nine </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1st Term  2025/2026.................... </p>
+                        <p>Continuous Assessment Scores for 1st Term  2025/2026. Academic Session................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>112</td> 
+                          <td>122</td> 
                                          
                        </tr>
                       </table>
@@ -1996,5 +1996,6 @@
       </script>
    </body>
 </html>
+
 
 
