--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>King Jomiloju</h2><br>
                      <h2> Grade Eight </h2>
                      <table>
-                    <p>Continuous Assessment Scores for 1st Term  2025/2026..................... </p>
+                    <p>Continuous Assessment Scores for 1st Term  2025/2026. Academic Session.................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>116</td> 
+                          <td>114</td> 
                                          
                        </tr>
                       </table>
@@ -2030,4 +2030,5 @@
       </script>
    </body>
 </html>
+
 
