--- a/Odeleye-Paul-Result.html
+++ b/Odeleye-Paul-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Odeleye Paul</h2><br>
                      <h2> Grade Eight </h2>
                      <table>
-                         <p>Continuous Assessment Scores for 1st Term  2025/2026.................... </p>
+                         <p>Continuous Assessment Scores for 1st Term  2025/2026 Academic Session.................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -2030,3 +2030,4 @@
       </script>
    </body>
 </html>
+
