--- a/Olayemi-Raelle-Result.html
+++ b/Olayemi-Raelle-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Olayemi Raelle</h2><br>
                      <h2> Grade Eight </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1st Term  2025/2026.................... </p>
+                        <p>Continuous Assessment Scores for 1st Term  2025/2026 Academic Session.................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>120</td> 
+                          <td>112</td> 
                                          
                        </tr>
                       </table>
@@ -2039,4 +2039,5 @@
       </script>
    </body>
 </html>
+
 
