--- a/Onaja-Empress-Result.html
+++ b/Onaja-Empress-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Onaja Empress</h2><br>
                      <h2> Grade Eight </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1st Term  2025/2026..................... </p>
+                        <p>Continuous Assessment Scores for 1st Term  2025/2026 Academic Session..................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -2011,4 +2011,5 @@
       </script>
    </body>
 </html>
+
 
