--- a/Onoja-Emilia-Result.html
+++ b/Onoja-Emilia-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Onaja Emilia</h2><br>
                      <h2> Grade Nine </h2>
                      <table>
-                         <p>Continuous Assessment Scores for 1st Term 2025/2026.................... </p>
+                         <p>Continuous Assessment Scores for 1st Term 2025/2026 Academic Session.................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>116</td> 
+                          <td>120</td> 
                                          
                        </tr>
                       </table>
@@ -2017,5 +2017,6 @@
       </script>
    </body>
 </html>
+
 
 
