--- a/GradeThree/Matuluko-Abolaji-Result.html
+++ b/GradeThree/Matuluko-Abolaji-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Matuluko David Abolaji</h2><br>
                      <h2> Grade Three </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for 1st Term  2025/2026 Academic Session..................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -170,19 +170,19 @@
                            <td>1st Half</td>
                          </tr>
                          <tr>
+                           <td>76</td>
+                           <td>70</td>
+                           <td>90</td>
+                           <td>94</td>
                            <td>98</td>
-                           <td>100</td>
-                           <td>100</td>
-                           <td>95</td>
-                           <td>99</td>
-                           <td>93</td>
-                           <td>100</td>
+                           <td>96</td>
+                           <td>90</td>
+                           <td>70</td>
+                           <td>82</td>
+                           <td>65</td>
                            <td>-</td>
+                           <td>86</td>
                            <td>-</td>
-                           <td>84</td>
-                           <td>100</td>
-                           <td>91</td>
-                           <td>98</td>
                            <td>Marks Obtained</td>
                            
                            <td>1st Half</td>
@@ -605,4 +605,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
