--- a/GradeOne/Olajide-Zahra-Result.html
+++ b/GradeOne/Olajide-Zahra-Result.html
@@ -92,9 +92,9 @@
 
 
                       <h2>Result for <br>Olajide Zahra</h2><br>
-                      <h2> Grade Two </h2>
+                      <h2> Grade Three </h2>
                      <table>
-                     <p>Continuous Assessment Scores for Term: 3rd Term 2024/2025 </p>
+                     <p>Continuous Assessment Scores for Term: 1st Term 2025/2026 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -3108,4 +3108,5 @@
       </script>
    </body>
 </html>
+
 
