--- a/GradeThree/Adepoju-Jason-Joseph-Result.html
+++ b/GradeThree/Adepoju-Jason-Joseph-Result.html
@@ -506,7 +506,7 @@
                      
                      </tr>
                   </table>
-                  <p>Class Teachers Comment: Jason.<br></p>
+                  <p>Class Teachers Comment: This is a brilliant performance.You should keep up the good work.<br></p>
                   &nbsp;
                   &nbsp;
                   <p>Head Teachers Comment: A very good performance.<br></p>
@@ -1861,4 +1861,5 @@
       </script>
    </body>
 </html>
+
 
